src/ui/readarr_ui/indexers/snapshots/managarr__ui__readarr_ui__indexers__indexers_ui_tests__tests__snapshot_tests__indexers_ui_TestIndexer.snap
---
source: src/ui/readarr_ui/indexers/indexers_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Indexer                              RSS                   Automatic Search      Interactive Search    Priority              Tags                                 
=> Decoy Usenet Indexer                 Disabled              Enabled               Enabled               7                     usenet-only                          
   Test Torrent Indexer                 Enabled               Enabled               Disabled              42                    alex                                 
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                             ╭───────────────  Error  ───────────────╮                                                               
                                                             │                 error                 │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             ╰───────────────────────────────────────╯
